[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rc-rd-acquire"
version = "0.1.0"
description = "Government Change Intelligence Pipeline for RC/RD rural health opportunities"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "tiktoken>=0.8.0",
    "greenlet>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acquire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
